
INCLUDES = -I$(top_srcdir)/src 

noinst_LTLIBRARIES = libobjects.la

libobjects_la_SOURCES = \
		       bezierpatch.h	\
		       bezierpatch.cpp 	\
		       blob.h		\
		       blob.cpp		\
		       bound.h		\
		       bound.cpp	\
		       bound.h		\
		       box.h		\
		       box.cpp		\
		       cone.h		\
		       cone.cpp		\
		       csg.h		\
		       csg.cpp		\
		       csg_union.cpp	\
		       cylinder.h	\
		       cylinder.cpp	\
		       ellipsoid.h	\
		       ellipsoid.cpp	\
		       extrusion.h	\
		       extrusion.cpp	\
		       heightfield.h	\
		       heightfield.cpp	\
		       isosurface.h	\
		       isosurface.cpp	\
		       mesh.h		\
		       mesh.cpp		\
		       necklace.h	\
		       necklace.cpp	\
		       object.h		\
		       object.cpp	\
		       objectgroup.h	\
		       objectgroup.cpp	\
		       parametrizedsurface.h \
		       parametrizedsurface.cpp \
		       sceneobject.h	\
		       solid.h		\
		       solid.cpp	\
		       solidbox.h	\
		       solidbox.cpp	\
		       sor.h		\
		       sor.cpp		\
		       sphere.h		\
		       sphere.cpp	\
		       superellipsoid.h	\
		       superellipsoid.cpp	\
		       tessalation.h	\
		       tessalation.cpp	\
		       tetrahedron.h	\
		       tetrahedron.cpp	\
		       torus.h		\
		       torus.cpp	\
		       transformedinstance.h	\
		       transformedinstance.cpp	\
		       triangle.h 	\
		       triangle.cpp	\
		       wireframe.h	\
		       wireframe.cpp

