
AM_CPPFLAGS = -I$(top_srcdir)/src 

noinst_LTLIBRARIES = libobjects.la

libobjects_la_SOURCES = \
		       bezierpatch.h	\
		       bezierpatch.cpp 	\
		       blob.h		\
		       blob.cpp		\
		       bound.h		\
		       bound.cpp	\
		       bound.h		\
		       box.h		\
		       box.cpp		\
		       cone.h		\
		       cone.cpp		\
		       csg.h		\
		       csg.cpp		\
		       csg_union.cpp	\
		       cylinder.h	\
		       cylinder.cpp	\
		       ellipsoid.h	\
		       ellipsoid.cpp	\
		       extrusion.h	\
		       extrusion.cpp	\
		       halfspace.h	\
		       halfspace.cpp	\
		       heightfield.h	\
		       heightfield.cpp	\
		       isosurface.h	\
		       isosurface.cpp	\
		       julia.h		\
		       julia.cpp	\
		       marchingcubes.cpp \
		       marchingcubes.h	\
		       mesh.h		\
		       mesh.cpp		\
		       object.h		\
		       object.cpp	\
		       objectgroup.h	\
		       objectgroup.cpp	\
		       obj.cpp \
		       obj.h \
		       parametrizedsurface.h \
		       parametrizedsurface.cpp \
		       ply.h		\
		       ply.cpp		\
		       sceneobject.h	\
		       solid.h		\
		       solid.cpp	\
		       solidbox.h	\
		       solidbox.cpp	\
		       sor.h		\
		       sor.cpp		\
		       sphere.h		\
		       sphere.cpp	\
		       superellipsoid.h	\
		       superellipsoid.cpp	\
		       tessalation.h	\
		       tessalation.cpp	\
		       tetrahedron.h	\
		       tetrahedron.cpp	\
		       text.h		\
		       text.cpp		\
		       torus.h		\
		       torus.cpp	\
		       transformedinstance.h	\
		       transformedinstance.cpp	\
		       triangle.h 	\
		       triangle.cpp	\
		       wireframe.h	\
		       wireframe.cpp

