
INCLUDES = -I$(top_srcdir)/src 

noinst_LIBRARIES = libpaths.a

libpaths_a_SOURCES = path.cpp circle.cpp spiral.cpp linesegment.cpp line.cpp bezierspline.cpp arc.cpp

EXTRA_DIST = arc.h		\
    	     bezierspline.h 	\
             path.h 		\
             circle.h 		\
	     spiral.h 		\
	     line.h 		\
	     linesegment.h
