
AM_CPPFLAGS = -I$(top_srcdir)/src 

noinst_LTLIBRARIES = libpaths.la

libpaths_la_SOURCES = path.cpp circle.cpp spiral.cpp linesegment.cpp line.cpp bezierspline.cpp arc.cpp catmullromspline.cpp ellipse.cpp

EXTRA_DIST = arc.h		\
    	     bezierspline.h 	\
	     catmullromspline.h	\
             path.h 		\
             circle.h 		\
	     ellipse.h		\
	     spiral.h 		\
	     line.h 		\
	     linesegment.h
