
INCLUDES = -I$(top_srcdir)/src 

noinst_LIBRARIES = libphoton.a

libphoton_a_SOURCES = photon.cpp globalphotonmap.cpp causticsmap.cpp photontracer.cpp irradiancecache.cpp

EXTRA_DIST = photon.h		\
    	     genericphotonmap.h	\
    	     genericphotonmap.cpp	\
    	     globalphotonmap.h	\
	     irradiancecache.h	\
    	     photontracer.h	\
    	     causticsmap.h 
