

INCLUDES = -I$(top_srcdir)/src 

noinst_LTLIBRARIES = libsamplers.la

libsamplers_la_SOURCES = sampler.cpp 		\
			 sampler.h		\
			 non_aa_sampler.cpp 	\
			 whitted_adaptive.cpp	\
			 uniform_jitter.cpp 	\
			 sampler.h		

EXTRA_DIST = sampler.h		\
    	     non_aa_sampler.h 	\
	     whitted_adaptive.h	\
             uniform_jitter.h

