

INCLUDES = -I$(top_srcdir)/src 

noinst_LTLIBRARIES = libsamplers.la

libsamplers_la_SOURCES = sampler.cpp 		\
			 non_aa_sampler.cpp 	\
			 whitted_adaptive.cpp	\
			 halton_sampler.cpp	\
			 uniform_jitter.cpp 

EXTRA_DIST = sampler.h		\
    	     non_aa_sampler.h 	\
	     whitted_adaptive.h	\
	     halton_sampler.h	\
             uniform_jitter.h

